tests/ui/impl-trait/two_tait_defining_each_other2.next.stderr
error[E0282]: type annotations needed
  --> $DIR/two_tait_defining_each_other2.rs:12:11
   |
LL | fn muh(x: A) -> B {
   |           ^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
